# stem

./: .releaserc  Cargo.toml  Data.json  Dockerfile  README.md  app.onion  bump_version.py  cfg.yml  gvm.spec  hearts.sepc  ovm.spec  setup.sh  stem.sh  stem.spec
.github/workflows/: bumpVersion.yml
crypter/: Cargo.toml
crypter/src/: cry.rs
docs/: trait.md
gvm/: Cargo.toml  README.md
gvm/src/: build.rs  graph.rs  lib.rs  owbo.rs
gvmlib/: Cargo.toml  gvm.sh  gvm.spec
gvmlib/src/: lib.rs  misc.rs  owbo.rs  raptor.rs  trait.md
hooper/: README.md  app.rs
hooper/grpc/event/: server.rs
ovmlib/: Cargo.toml  gvm.sh
ovmlib/src/: cruft.rs  dsl.rs  lib.rs  misc.rs  neuron.rs  owbo.rs  task.rs  vm.rs
src/: ast.rs  bop.rs  brain.rs  build.rs  codegen.rs  express.rs  funcs.rs  graph.rs  lexer.rs  lib.rs  main.rs  mathista.rs  misc.rs  models.rs  neuron.rs  nodify.rs  owbo.rs  parser.rs  schemas.rs  stream.rs  tests.rs  types.rs  vm.rs
src/mathista/: psychovision.rs  shortening.rs
src/playground/: app.rs  consts.rs  orex.rs  tcp_chan_enc.rs
src/theories/: information.rs
stemlib/: Cargo.toml  README.md
stemlib/src/: actor.rs  cruft.rs  dsl.rs  dto.rs  handlers.rs  impls.rs  interfaces.rs  lib.rs  messages.rs  neuron.rs  routers.rs  schemas.rs  task.rs  test.rs  tx.rs
stemlib/src/dsl/: mod.rs
stemplugins/: Cargo.toml
stemplugins/src/: README.md  plugins.rs
