[package]
name = "courtokm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand_chacha = "0.3"
wallexerr = "0.3.2"
