[package]
name = "stemlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
futures-util = "0.3"
actix = "0.13.5"
actix-web = "4"
rayon = "1"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4.0"
log4rs = "1.2.0"
tokio-cron-scheduler = "0.9.1"
env_logger = "0.10.0"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
rand = "0.8"
once_cell = "1"
wasmer = "4.1.1"
wasmer-wasi = "3.1.1"
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
futures = "0.3"
wallexerr = "0.3.2"
sha2 = "0.10"
is_type = "0.2.1"
indexmap = "2.4"


[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files or for tests
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "stemlib"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow
