[package]
name = "stemplugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"



[lib]
path = "src/plugins.rs"
name = "stemplugins"
proc-macro = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow
